[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/tiles/Pirate Ship/Sprites/Tilesets/invidivual_vertical_platform.png" type="Texture" id=1]
[ext_resource path="res://niveles/nivel_9_plataformas_moviles/fixed_platform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 5 )

[sub_resource type="RayShape2D" id=3]
length = 9.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="InvidivualVerticalPlatform" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="Area2D_bottom" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_bottom"]
position = Vector2( -6, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D_bottom"]
position = Vector2( 6, 0 )
shape = SubResource( 3 )

[node name="Area2D_top" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D_top"]
position = Vector2( -11, 0 )
rotation = 3.14159
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D_top"]
position = Vector2( 11, 0 )
rotation = 3.14159
shape = SubResource( 3 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Area2D_top"]
rotation = 3.14159
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D_bottom" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D_top" to="." method="_on_Area2D_top_body_entered"]
[connection signal="body_exited" from="Area2D_top" to="." method="_on_Area2D_top_body_exited"]
